deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: homepage
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: localhost:32000/homepage
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
