deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: homepage
spec:
  selector:
    app: app
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
